# interpreter

./: .gitignore  CMakeLists.txt  Makefile  README.md
data/: lexer_special_chars.txt
src/: Makefile  config.h  config.h.in  env.c  env.h  error_handling.h  evaluator.c  evaluator.h  expr.c  expr.h  flags.c  flags.h  lexer.c  lexer.h  lexer_utils.c  lexer_utils.h  main.c  parser.c  parser.h  shell.c  shell.h  tk_line.c  tk_line.h
test/: test.txt  test_accessor.txt
